# gpgpu_icp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: main.cc  main.cu
src/: utils.cc  utils.hh
src/cpu/: cpu.cc
src/cpu/icp/: icp.cc  icp.hh  icp_old.cc
src/cpu/parser/: parser.cc  parser.hh
src/cpu/transform/: transform.cc  transform.hh
src/cpu/utils/: lib-matrix.cc  lib-matrix.hh  matrix.cc  matrix.hh  uniform-random.hh  uniform-random.hxx  utils.cc  utils.hh
src/gpu/: gpu.cc
src/gpu/icp/: icp-gpu.cu  icp.cc  icp.cu  icp.hh
src/gpu/parser/: parser.hh
src/gpu/utils/: lib-matrix-gpu.cc  lib-matrix-gpu.hh  lib-matrix.cc  lib-matrix.cu  lib-matrix.h  lib-matrix.hh  uniform-random.hxx  utils.cu  utils.hh
src/gpu_1/: gpu.cu
src/gpu_1/icp/: icp.cu  icp.hh
src/gpu_1/parser/: parser.cu  parser.hh
src/gpu_1/utils/: lib-matrix.cu  matrix.cu  matrix.hh  uniform-random.hh  utils.cu  utils.hh
src/gpu_2/: gpu.cu
src/gpu_2/icp/: icp.cu  icp.hh
src/gpu_2/parser/: parser.cu  parser.hh
src/gpu_2/utils/: lib-matrix.cu  matrix.cu  matrix.hh  uniform-random.hh  utils.cu  utils.hh
src/gpu_3/: gpu.cu
src/gpu_3/icp/: icp.cu  icp.hh
src/gpu_3/parser/: parser.cu  parser.hh
src/gpu_3/utils/: lib-matrix.cu  matrix.cu  matrix.hh  uniform-random.hh  utils.cu  utils.hh
src/gpu_final/: gpu.cu
src/gpu_final/icp/: icp.cu  icp.hh
src/gpu_final/parser/: parser.cu  parser.hh
src/gpu_final/utils/: lib-matrix.cu  matrix.cu  matrix.hh  uniform-random.hh  utils.cu  utils.hh
src/gpu_full/: gpu.cc  gpu.cu
src/gpu_full/icp/: icp.cc  icp.cu  icp.hh
src/gpu_full/parser/: parser.cu  parser.hh
src/gpu_full/utils/: knncuda.cu  knncuda.hh  lib-matrix-cuda.cu  lib-matrix-cuda.hh  lib-matrix.cc  lib-matrix.cu  lib-matrix.hh  matrix.cc  matrix.cu  matrix.hh  uniform-random.hh  uniform-random.hxx  utils.cu  utils.hh
src/gpu_test/: gpu.cu
src/gpu_test/icp/: icp.cu  icp.hh
src/gpu_test/parser/: parser.cc  parser.cu  parser.hh
src/gpu_test/utils/: lib-matrix.cu  lib-matrix.hh  matrix.cc  matrix.cu  matrix.hh  uniform-random.hh  uniform-random.hxx  utils.cu  utils.hh
src/parser/: parser.cc  parser.hh
tests/small_set/: rectangle1.txt  rectangle2.txt
tests/unit_tests/: main.cc
